src/components/InputSearch.module.scss
@import '../global.module.scss';

.input_container {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

input {
  position: absolute;
  top: 180px;
  width: calc(100% - 30px);
  height: 45px;
  padding-left: 40px;
  border: none;
  border-radius: 6px;
  font-size: $control_typography_size;
}

.icon {
  position: relative;
  top: 14px;
  left: 10px;
  z-index: 10;
}

@media (min-width: 768px) {
  
  input {
    width: 45%; 
    top: 100px;
  }

  .input_container {
    padding-left: 30px;
  }

}

